--- a/styles.css
+++ b/styles.css
@@ -32,18 +32,7 @@ h1, h2, h3, h4, h5 {
     height: 0.5rem;
     width: 100%;
     background-image:linear-gradient(to right, rgba(255, 128, 0, 0.75),rgba(4, 157, 191, 0.75));
-  /*  background: rgba(255, 128, 0, 0.75);*/
     margin: 2rem 0;
-   /* content:' ';
-    display:block;
-   border:0.5px solid #d0d0d0;
-    margin-top: 10px;
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05); */
 } 
 
 h4 {
@@ -60,7 +49,6 @@ blockquote {
     padding: 11px 22px;
     margin: 0 0 22px;
     font-size: 20px;
-    /*border-left: 5px solid #0F528C;*/
     border-left: 5px solid rgba(4, 157, 191, 0.75);
 }
 
@@ -110,7 +98,6 @@ table {
 #TOC {
   margin: 25px 0px 35px 0px;
   background: #EEEEEE;
-  /*border: 1rem solid rgba(4, 157, 191, 0.75);*/
 }
 
 #TOC ul {
@@ -135,7 +122,6 @@ hr {
 }
 
 .module-background {
-  /*background-image: linear-gradient(to bottom, rgba(227, 68, 0, 0.8),rgba(65, 170, 170, 0.8));*/
    background-image: linear-gradient(to bottom, rgba(238, 100, 0, 0.7),rgba(4, 157, 191, 0.7)); 
     z-index: 1;
 }
@@ -161,24 +147,12 @@ hr {
   color: #333333;
   text-align: center;
   padding: 2rem;
- /* background-color: #0F528C; */
-  /* background-color: #7473A6;*/
- /* background-image: linear-gradient(120deg, #4CA7A9, #EE6400); */
  }
-/*  @media screen and (min-width: 64em) {
-    #header {
-      padding: 3rem 3rem; } }
-  @media screen and (min-width: 42em) and (max-width: 64em) {
-    #header {
-      padding: 3rem 3rem; } }
-  @media screen and (max-width: 42em) {
-    #header {
-      padding: 2rem 2rem; } }*/
 
 .title {
   margin-top: 0;
   margin-bottom: 0.1rem; 
-   line-height: 1.4;
+  line-height: 1.4;
 }
 
  @media screen and (min-width: 64em) {
@@ -207,24 +181,6 @@ hr {
   @media screen and (max-width: 42em) {
     .subtitle {
       font-size: 24px; } }
-
-/*.subtitle:after {
-   display: block;
-    content: " ";
-    height: 0.75rem;
-    background-image:linear-gradient(to right, rgb(255, 128, 0),rgb(4, 157, 191));
-    margin: 4rem auto;
-}   
-
-@media screen and (min-width: 64em) {
-    .subtitle:after {
-      max-width: 50%; } }
-  @media screen and (min-width: 42em) and (max-width: 64em) {
-    .subtitle:after {
-      width: 75%; } }
-  @media screen and (max-width: 42em) {
-    .subtitle:after {
-      width: 100%; } } */
       
 .author, .date {
   font-weight: normal;
@@ -241,15 +197,6 @@ hr {
     .author, .date {
       font-size: 18px; } }
 
-/*#header a {
-  color: #FFFFFF;
-}
-
-#header a:focus, #header a:hover {
-  color: #FFFFFF;
-  text-decoration: underline;
-}*/
-
 #logos {
   background-color: #FFFFFF;
   margin: auto;
@@ -261,7 +208,7 @@ hr {
 
 @media screen and (min-width: 64em) {
     #logos img {
-      height: 120px;} }
+      height: 100px;} }
   @media screen and (min-width: 42em) and (max-width: 64em) {
     #logos img {
       height: 100px; } }
@@ -311,15 +258,15 @@ hr {
     display:block;
     border:1px solid #d0d0d0;
     margin-top: 10px;
-    /*border-radius:4px;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);*/
 }
 
 .footer-content {
-  padding: 20px;
+  padding: 20px 20px 0px;
   font-weight: bold;
+  font-size: 18px;
+}
+
+.github-link {
+  font-weight: normal;
+  font-size: 16px;
 }
